--- a/JavaScript/tutorial/2. 자바스크립트 기본.md
+++ b/JavaScript/tutorial/2. 자바스크립트 기본.md
@@ -1,1 +1,52 @@
 # 2. 자바스크립트 기본
+## 2-1. Hello, world!
+### <script>의 속성
+ #### type 속성 `<script type=…>`   
+    HTML4까진 type 명시가 필수였으나, 이제는 필수가 아니며 자바스크립트 모듈에 사용함.
+#### language 속성 `<script language=…>`
+    현재 사용하고 있는 스크립트 언어를 나타냄. (자바스크립트의 보편화로 이 속성 역시 요즘엔 잘 사용하지 않음)
+
+✅ `<script>` 태그는 src 속성과 내부 코드를 동시에 가지지 못함.
+
+## 2-2. 코드 구조
+### 문
+어떤 작업을 수행하는 문법 구조 + 명령어
+### 세미콜론
+자바스크립트는 줄 바꿈을 '암시적' 세미콜론으로 해석하기 때문에 세미콜론 생략이 가능하지만, 넣는 것을 권장함
+### 주석
+    // 한 줄 주석
+
+    /*
+    여러 줄
+    주석
+    */
+
+✅ 자바스크립트는 중첩 주석을 지원하지 않음
+
+## 2-3. 엄격 모드
+### use strict
+`"use strict";` 혹은 `'use strict';`를 사용한 코드에는 엄격 모드가 활성화됨   
+
+    엄격 모드(strict mode)란?   
+       
+    1. 스크립트 코드에서 오류는 아니지만 함정이 될 부분을 오류가 발생하도록 변경하여 제거 -> 디버깅이 쉬워짐
+       
+    2. 자바스크립트 엔진의 최적화 처리를 방해하는 오류 수정 -> 처리 속도가 빨라짐
+
+    3. 차후 업데이트 될 버전의 ECMAScript로 정의될 예정 구문을 금지 -> 에러 방지
+✅ 클래스와 모듈을 사용하여 구성한 코드는 use script를 생략해도 됨
+
+## 2-4. 변수와 상수
+### 변수
+데이터를 저장하는 메모리 공간의 이름   
+`let`, `var`로 선언
+### 변수 명명 규칙
+    1. 변수명에는 문자, 숫자, $, _만 사용 가능
+    2. 첫 글자는 숫자가 될 수 없음
+    3. 대·소문자 구분함
+    4. 예약어는 변수명으로 사용할 수 없음 (let, class...)
+### 상수
+변화하지 않는 값을 가진 변수   
+`const`로 선언
+### 대문자 상수
+    상수는 대문자와 밑줄(_)로 구성된 이름을 사용
