--- a/JavaScript/tutorial/3. 코드 품질.md
+++ b/JavaScript/tutorial/3. 코드 품질.md
@@ -1,1 +1,105 @@
+# 3. 코드 품질
+## 3-1. Chrome으로 디버깅하기
+### 디버깅
+스크립트 내 에러를 검출해 제거하는 일련의 과정
+### 개발자 도구의 'Sources' 패널
+* **파일 탐색 영역**  
+    페이지를 구성하는 데 쓰인 모든 리소스를 트리 형태로 보여줌
+
+* **코드 에디터 영역**   
+    리소스 영역에서 선택한 파일의 소스 코드를 보여줌 (소스 코드 편집 가능)
+
+* **자바스크립트 디버깅 영역**   
+    디버깅에 관련된 기능을 제공
+### 콘솔
+개발자 도구 창을 연 상태에서 `ESC` 키를 누르면 하단부 콘솔 창이 활성화/비활성화 된다   
+### 중단점
+자바스크립트의 실행이 중단되는 코드 내 지점 (디버깅 시 사용)
+
+중단점을 이용하면 실행이 중지된 시점에 변수가 어떤 값을 담고 있는지 알 수 있으며, 실행이 중지된 시점을 기준으로 명령어를 실행할 수 있음   
+
+✅ **조건부 중단점**   
+
+    줄 번호에 커서를 옮긴 후 우클릭 -> 조건부 중단점 설정
+    Add conditional breakpoint를 클릭했을 때 뜨는 창에 표현식을 입력하면, 표현식이 참일 경우에만 실행을 중지시킬 수 있음
+
+스크립트 코드 내 `debugger` 명령어를 작성하면 개발자 도구에서 제공하는 중단점 기능과 동일한 효과를 볼 수 있음   
+
+`debugger; // <-- 코드 진행 중 이 구문에서 실행이 멈추게 됨`
+### 멈추면 보이는 것들 ( 중단점 설정 후 디버깅 영역 )
+* **Watch**  
+    표현식을 평가하고 결과를 보여줌   
+    `+` 버튼 누른 후 표현식을 입력하면 중단 시점의 값을 보여줌   
+    입력한 표현식은 실행 과정 중 계속해서 재평가됨
+
+* **Call Stack**   
+    코드를 해당 중단점으로 안내한 실행 경로를 역순으로 표시   
+    콜 스택 내 항목을 클릭하면 디버거가 해당 코드로 이동하고, 변수 또한 재평가됨
+
+* **Scope**   
+    현재 정의된 모든 변수를 출력   
+    - Local - 함수의 지역 변수
+    - Global - 함수 바깥에 정의된 전역 변수
+### 실행 추적하기
+디버깅 영역 상단 버튼들의 역할   
+
+    1. Resume (F8) :  스크립트 실행 재개
+    2. Step (F9) : 다음 명령어를 실행 (비동기 동작 무시)
+    3. Step over (F10) : 다음 명령어를 실행하되, 함수 안으로 들어가진 않음 (함수 호출 시 내부에서 어떤 일이 일어나는지 궁금하지 않을 때 유용)
+    4. Step into (F11) : Step과 유사하지만 비동기 동작 코드에 진입함
+    5. Step out (Shift + F11) : 현재 실행 중인 함수의 실행을 계속 이어가다가 함수 본문 마지막 줄에서 실행을 멈춤
+    6. 모든 중단점 활성화 / 비활성화 버튼
+    7. 예외 발생 시 자동 중지 기능 활성화 / 비활성화 버튼
+
+    Continue to here (특정 줄 우클릭 - 컨텍스트 메뉴) : 중단점을 설정하지 않고 해당 줄에서 실행 재개
+스크립트가 중단되는 경우는 중단점에 걸렸을 때, `debugger;`문을 만났을 때, 에러가 발생했으며 위 7번 버튼이 활성화 된 경우이다.
+
+
+## 3-2. 코딩 스타일
+### 추천 문법
+
+    1. 함수 이름과 괄호 및 인자 사이에는 공백 없이 // pow(x, n)
+    2. 매개변수 사이에 공백 한 칸씩 // pow(x, n)
+    3. 중괄호는 앞에 공백 한 칸을 두고 같은 줄에 작성
+    4. 공백 2칸으로 들여쓰기
+    5. 연산자 앞뒤에 공백 한 칸씩
+    6. for/if/while 뒤에 공백 한 칸씩
+    7. 문의 끝에는 세미콜론
+    8. 논리적으로 다른 블록은 한 줄 띄어쓰기
+    9. 한 줄은 너무 길지 않게
+    10. } else { 줄바꿈 없이
+    11. 중첩된 호출 앞뒤에 공백 한 칸씩
+
+### 중괄호
+중괄호 내 코드가 여러 줄일 때
+```javascript
+if (condition) {
+    // 코드 1
+    // 코드 2
+    // ...코드 n...
+}
+```
+중괄호 내 코드가 한 줄일 때   
+(코드가 짧으면 중괄호를 생략하고 한 줄로 써도 괜찮음)
+```javascript
+if (condition) // 코드 1
+
+if (condition) {
+    // 코드 1
+}
+```
+### 가로길이
+코드의 가로 길이가 길어진다면 여러 줄로 나누어 작성
+### 들여쓰기
+* **가로 들여쓰기**  
+    스페이스 두 개 혹은 네 개 / 탭 키
+
+* **세로 들여쓰기**   
+    논리 블록 사이에 넣어 코드를 분리해 주는 새 줄 (엔터 키)   
+    ✅ 코드의 가독성을 높이기 위해 세로 들여쓰기 없이 아홉 줄 이상 연달아 적지 않는 게 좋음 
+### 세미콜론
+자바스크립트에선 줄 바꿈이 세미콜론으로 해석되지 않는 예외 상황이 있기 때문에 구문 끝엔 세미콜론을 써주는 것이 좋다
+### 중첩 레벨
+너무 깊은 중첩문은 지양해야 한다
+
 
