--- a/JavaScript/tutorial/4. 객체: 기본/4-4. 메서드와 this.md
+++ b/JavaScript/tutorial/4. 객체: 기본/4-4. 메서드와 this.md
@@ -70,3 +70,48 @@ user = null; // user 값을 null로 바꿈
 
 admin.sayHi(); // 다시 admin에서 sayHi() 함수를 호출 했을 때 sayHi()는 null 값을 참조하게 됨
 ```
+### 자유로운 this
+자바스크립에서 `this`는 모든 함수에 사용이 가능함   
+```javascript
+/*** 동일한 함수를 다른 객체에 할당하면 this의 값이 달라짐 ***/
+
+let user = { name: "John" };
+let admin = { name: "Admin" };
+
+function sayHi() {
+  alert( this.name );
+}
+
+user.f = sayHi;
+admin.f = sayHi;
+
+user.f(); // John
+admin.f(); // Admin
+
+
+/*** 객체 없이 호출할 경우 ***/
+
+function sayHi() {
+  alert(this);
+}
+
+sayHi(); // undefined (엄격 모드)
+// 엄격 모드가 아닐 땐 this가 전역 객체를 참조함 (브라우저 환경에선 window라는 전역 객체)
+// 함수 본문에 this 사용되면 객체 컨텍스트 내에서 함수를 호출해야 함
+```
+### 화살표 함수에서의 this
+화살표 함수는 고유한 `this`를 가지지 않음   
+화살표 함수에서 `this` 참조 시 화살표 함수가 아닌 외부 함수에서 `this` 값을 가져옴
+```javascript
+let user = {
+  firstName = "보라", // arrow의 this.firstName
+  sayHi() {
+    let arrow = () => alert(this.firstName); // arrow의 this는 외부 함수 user.sayHi()의 this가 됨
+    arrow();
+  }
+};
+
+user.sayHi(); // 보라
+```
+
+
