--- a/JavaScript/tutorial/4. 객체: 기본/4-7. 심볼형.md
+++ b/JavaScript/tutorial/4. 객체: 기본/4-7. 심볼형.md
@@ -27,3 +27,26 @@ let user = {
 let id2 = Symbol("id2");
 user[id2] = 1; // 심볼형 키를 객체 리터럴 밖에서 넣는 방법
 ```
+- **전역 심볼** 
+```javascript
+// Symbol.for(key)
+// 메서드 호출 시 레지스트리 안에 이름이 key인 심볼이 있으면 그 심볼을 반환하고, 없으면 새로운 심볼 Symbol(key)을 만듦
+// ** 이름이 같은 심볼이 같은 개체를 가리킴
+
+let id = Symbol.for("id");
+let idAgain = Symbol.for("id");
+alert(id === idAgain); // true
+```
+- **전역 심볼 이름 찾기** - Symbol.keyFor()
+```javascript
+/** 이름을 이용해 심볼 찾기 **/
+let sym = Symbol.for("name");
+let sym2 = Symbol.for("id");
+
+/** 전역 심볼 이름 찾기 **/
+// 검색 범위가 전역 심볼 레지스트리이므로, 전역 심볼이 아닌 심볼에는 사용할 수 없음
+// 전역 심볼이 아닌 인자 입력 시 undefined 반환
+// 전역 심볼이 아닌 심볼은 description 프로퍼티를 사용하면 됨
+alert( Symbol.keyFor(sym) ); // name
+alert( Symbol.keyFor(sym2) ); // id
+```
