--- a/JavaScript/tutorial/5. 자료구조와 자료형/5-3. 문자열.md
+++ b/JavaScript/tutorial/5. 자료구조와 자료형/5-3. 문자열.md
@@ -15,11 +15,12 @@ function sum(a, b) {
   return a+b
 }
 
-alert(`1 + 2 = ${sum(1, 2)}.`); // 백틱을 이용하여 문자열 중간에 표현식 삽입(템플릿 리터럴)
+// 백틱을 이용하여 문자열 중간에 표현식 삽입(템플릿 리터럴)
+alert(`1 + 2 = ${sum(1, 2)}.`); 
 ```
 ### 줄바꿈
 ```javascript
-// 백틱은 문자열을 여러 줄에 걸쳐 작성할 수 있
+// 백틱은 문자열을 여러 줄에 걸쳐 작성할 수 있음
 let backticksList = `손님:
 *John
 *Pete
@@ -27,12 +28,126 @@ let backticksList = `손님:
 `;
 
 // 백틱이 아닌 따옴표로 여러 줄을 작성할 경우 오류 발생
-let singleList = '손님: // Error: Invalid or unexpected token
-  *John';
+let singleList = '손님:   
+  *John'; // Error: Invalid or unexpected token
 
 // 작은따옴표나 큰따옴표는 특수 기호 '\n'을 이용하여 줄바꿈 가능
 let doubleList = "손님:\n*John\n*Pete\n*Mary";
 
 // 백틱을 이용한 경우와 특수 기호를 이용한 경우 표현 방식만 다를 뿐 차이가 없음
 alert(backticksList == doubleList); //true
+```
+### 특수 기호
+- 모든 특수 기호는 `역슬래시(이스케이프 문자, \)`로 시작함  
+- 역슬래시는 **문자열을 정확히 읽기 위한 용도**로, 그 역할을 다하면 사라지기 때문에 메모리에 남지 않음  
+
+|특수 문자|설명|
+|---|--------|
+|`\n`|줄 바꿈|
+|`\r`|캐리지 리턴. 단독으로 사용하지 않고 Windows의 경우 캐리지 리턴과 줄 바꿈 특수 문자를 조합해 줄을 바꿈 (`\r\n`)|
+|`\'`, `\"`|따옴표 (문자열 내 따옴표를 삽입해야 할 때, **문자열을 감싸는 따옴표와 같을 경우** 혼동될 수 있기 때문에 역슬래시 처리를 해 주어야 함)|
+|`\\`|역슬래시|
+|`\t`|탭|
+|`\b`, `\f`, `\v`|차례로 백스페이스, 폼 피드, 세로 탭. 호환성 유지로 남아있으나 요즘은 사용되지 않는 기호|
+|`\xXX`|16진수 유니코드 `XX`로 표현한 유니코드 글자 (알파벳 `z` = `\x74`)|
+|`\uXXXX`|UTF-16 인코딩 규칙을 사용하는 16진수 유니코드 기호를 `XXXX`로 표현 (저작권 기호 `©` = `\u00A9`)|
+|`\u{x...xxxxxx}`|UTF-32 인코딩 규칙을 사용하는 유니코드 기호. 몇몇의 기호는 두 개의 유니코드 기호를 사용해 인코딩되므로 4바이트 차지|
+### 문자열의 길이
+자바스크립트에서 문자열의 길이는 `length` 프로퍼티를 사용하여 구함  
+`length`는 함수가 아닌 프로퍼티이므로 때문에 **뒤에 괄호가 붙지 않음**  
+```javascript
+let str = "안녕하세요."
+alert(str.length); // 6
+alert("안녕하세요.\n".length); // 7, 특수 기호는 한 글자로 인식
+```
+### 특정 글자에 접근하기
+- `str.charAt(pos)` 메서드 이용하기  
+(요즘엔 잘 사용하지 않는 메서드이지만 하위 호환성을 위해 남아있는 메서드)
+- `str[pos]` 대괄호 이용하기
+```javascript
+let str = `Hello`;
+
+// 첫 글자
+alert(str[0]); // H
+alert(str.charAt(0)); // H
+
+// 마지막 글자
+alert(str[str.length - 1]); // o
+alert(str.charAt(str.length - 1)); // o
+
+// 반환할 글자가 없을 때
+alert(str[1000]); // undefined
+alert(str.charAt(1000)); // '' (빈 문자열)
+```
+### 문자열의 불변성
+**문자열은 특정 문자만 수정하려고 하면 오류가 발생함**  
+문자열을 수정하려면 새 문자열을 만든 후 기존 문자열 변수에 재할당 해야 함
+```javascript
+let str = "Hello";
+
+let str[0] = "h"; // Error: Cannot assign to read only property '0' of string 'Hello'
+alert(str[0]); // 동작하지 않음
+
+let newStr = 'Hi';
+
+str = 'h' + str[1]; // 문자열 전체를 교체
+alert( str ); // hi
+```
+### 대·소문자 변경하기
+대소문자 변경에는 `toLowerCase()`와 `toUpperCase()` 메서드가 쓰임
+```javascript
+alert('hello'.toUpperCase()); // HELLO
+alert('HELLO'.toLowerCase()); // hello
+alert('hello'[0].toUpperCase()); // Hello
+```
+### 부분 문자열 찾기
+- `str.indexOf(substr, pos)` 메서드 이용하기  
+문자열 str의 pos에서부터 시작하여, 부분 문자열 substr이 어디에 위치하는지를 찾아줌  
+원하는 부분 문자열을 찾으면 위치 반환, 찾지 못하면 `-1` 반환
+```javascript
+let str = 'Widget with id';
+
+alert(str.indexOf('Widget')); // 0
+alert(str.indexOf('widget')); // -1, indexOf는 대소문자를 구분함
+alert(str.indexOf('id')); // 1
+alert(str.indexOf('id', 2)); // 12, 'Widget with id'에서 'id'는 1번째 위치와 12번째 위치에 존재하는데, 두 번째 'id'를 찾기 위해 pos 값 지정
+
+
+// 타겟이 되는 문자열 하나만 찾는 게 아니라 모든 타겟에 대한 위치 값을 찾아야 할 땐 반복문 안에 indexOf를 사용함
+
+let longStr = 'As sly as a fox, as strong as an ox';
+let target = 'as';
+let pos = 0;
+
+while (true) {
+  let foundPos = longStr.indexOf(target, pos);
+  if (foundPos == -1) break;
+  alert (`위치: ${foundPos}`);
+  pos = foundPos + 1;
+} // 위치: 7, 위치: 17, 위치: 27 alert이 차례로 뜸
+
+
+// indexOf와 lastIndexOf는 문자열을 찾으면 위치를 반환하기 때문에 위치 값이 0일 겨웅 if문 조건식에서 false를 반환하게 됨
+
+let txt = "Widget with id";
+
+if (str.indexOf("Widget")) {
+  alert("존재");
+} // alert이 뜨지 않음
+
+if (str.indexOf("Widget") != =1) {
+  alert("존재");
+} // 존재, indexOf로 문자열 존재 여부를 파악하려면 반환된 위치 값이 -1인지 아닌지를 구분해야 함
+
+if (~str.indexOf("Widget")) {
+  alert("존재");
+} // 
+```
+- `str.lastIndexOf(substr, pos)` 메서드 이용하기  
+indexOf와 유사하나 lastIndexOf는 문자열 **끝에서부터** 부분 문자열을 찾음  
+반환되는 부분 문자열 위치도 문자열 끝이 기준
+```javascript
+let str = 'Widget with id';
+
+alert(str.lastIndexOf('id')); // 12
 ```
