--- a/JavaScript/tutorial/5. 자료구조와 자료형/5-3. 문자열.md
+++ b/JavaScript/tutorial/5. 자료구조와 자료형/5-3. 문자열.md
@@ -141,7 +141,7 @@ if (str.indexOf("Widget") != =1) {
 
 if (~str.indexOf("Widget")) {
   alert("존재");
-} // 
+} // 존재, 비트 NOT 연산자를 이용한 기법
 ```
 - `str.lastIndexOf(substr, pos)` 메서드 이용하기  
 indexOf와 유사하나 lastIndexOf는 문자열 **끝에서부터** 부분 문자열을 찾음  
@@ -151,3 +151,57 @@ let str = 'Widget with id';
 
 alert(str.lastIndexOf('id')); // 12
 ```
+- `str.includes(substr, pos)` 메서드 이용하기  
+부분 문자열의 위치 값을 반환하는 indexOf와 달리 includes는 포함 여부만을 판단 (true / false)
+```javascript
+alert("Widget with id".includes("Widget")); // true
+alert("Widget with id".includes("widget")); // false, 대소문자를 구별함
+alert("Widget with id".includes("Widget", 1)); // false, 첫 번째 위치 이후로는 "Widget"을 찾을 수 없음
+```
+- `str.startsWith(substr)`와 `str.endsWith(substr)` 이용하기  
+startsWith와 endsWith는 str이 특정 문자열로 시작하거나 끝나는지 판단
+```javascript
+alert("Widget with id".startsWith("Wid")); // true
+alert("Widget with id".endsWith("Wid")); // false
+```
+**요약**  
+부분 문자열의 위치를 알아야 할 때 : `indexOf`, `lastIndexOf`  
+부분 문자열 포함 여부만 알아도 될 때 : `includes`  
+부분 문자열로 시작(종료)하는지 알아야 할 때 : `startsWith`, `endsWith`
+### 부분 문자열 추출하기
+- `str.slice(start, end)` 메서드 이용하기  
+str[start]부터 str[end-1]까지 반환 (end 값이 생략된 경우 문자열 끝까지 반환)
+```javascript
+let str = "stringify"
+
+alert(str.slice(0, 5)); // strin
+alert(str.slice(0, 1)); // s
+alert(str.slice(1)); //tringify
+alert(str.slice(-4, -1)); // gif, 음수 값 사용 시 끝에서부터 카운팅
+```
+- `str.substring(start, end)` 메서드 이용하기   
+slice와 마찬가지로 str[start]부터 str[end-1]까지 반환하지만, start 값이 end 값보다 커도 괜찮다는 차이점이 있음  
+또 slice와 다르게 음수 값을 허용하지 않음 (음수 입력 시 0 처리)
+```javascript
+let str = "stringify";
+
+alert(str.substring(2, 6)); // ring
+alert(str.substring(6, 2)); // ring
+
+alert(str.slice(2, 6)); // ring
+alert(str.slice(6, 2)); // 빈 문자열 반환
+```
+- `str.substr(start, length)` 메서드 이용하기  
+위치가 기준이 되는 메서드들과 달리 substr은 **길이 기준으로 length개의 글자 반환**  
+🚫 브라우저 이외 호스트 환경에서는 제대로 동작하지 않을 수 있음
+```javascript
+let = "stringify";
+
+alert(str.substr(2, 4)); // ring
+alert(str.substr(-4, 2)); // gi, 음수 값 사용 시 끝에서부터 카운팅
+```
+### 문자열 비교하기
+- 소문자는 항상 대문자보다 큼
+- 발음 구별 기호가 붙은 문자는 알파벳 순서 기준을 따르지 않음 (후순위)
+- `str.codePointAt(pos)`는 문자열 str 중 pos 위치 글자의 코드를 반환  
+`str.fromCodePont(code)`는 code에 대응하는 글자를 만들어 줌
