--- a/JavaScript/tutorial/5. 자료구조와 자료형/5-4. 배열.md
+++ b/JavaScript/tutorial/5. 자료구조와 자료형/5-4. 배열.md
@@ -2,8 +2,21 @@
 ## 5-4. 배열
 ### 배열 선언 방법
 ```javascript
-let arr = new Array();
-let arr = [];
+let arr = []; // 일반적으로 사용되는 방법
+let arr = new Array(); // new Array()를 이용한 방법
+
+/* new Array() 방법이 많이 사용되지 않는 이유
+
+1. 대괄호를 이용하면 더 쉽게 배열을 생성할 수 있음 
+2. new Array() 문법 특성상 실수하기 쉬움 */
+
+let newArr = new Array("사과", "배", "포도");
+alert(newArr[0]); // 사과, 정상 출력
+
+let errArr = new Array(2);
+alert(errArr[0]); // undefind
+
+// newArr에서 생성과 동시에 문자열 값을 할당한 것처럼 2를 인수로 넘기면 errArr[0]에 2가 할당되는 것을 기대할 수 있지만, 인수가 숫자일 경우 값이 아닌 length로 인식하기 때문에 length 값이 2인 배열이 만들어짐 이런 특성으로 사용자가 실수하기 쉬움
 ```
 ### 배열의 기본 특성
 ```javascript
@@ -41,7 +54,7 @@ let newArr = arr;
 newArr[0] = "레몬";
 
 alert(arr); // 레몬,복숭아,포도
-alert(newArr); // 레몬,복숭아, 포도
+alert(newArr); // 레몬,복숭아,포도
 ```
 배열은 **순서가 있는 자료**를 저장하는 용도로 만들어진 자료구조로, 일반 객체처럼 다루게 되면 배열만의 최적화 기법이 동작하지 않음  
 
@@ -52,7 +65,9 @@ alert(newArr); // 레몬,복숭아, 포도
 
 ### pop, push / shift, unshift
 배열에서 **처음이나 끝 요소를 빼거나 더하도록 해 주는 메서드**  
-pop, push는 배열의 끝 요소를 다루고, shift, unshift는 배열의 앞 요소를 다룸
+`pop`, `push`는 배열의 끝 요소를 다루고, `shift`, `unshift`는 배열의 앞 요소를 다룸  
+
+✅ 맨 뒤 요소를 다루는 `pop`과 `push`는 빠르지만, `shift`와 `unshift`의 경우 맨 앞 요소를 삭제/추가하고 그 뒤의 요소들도 이동해야 하기 때문에 속도가 비교적 느림
 - **pop**  
 배열 끝 요소를 제거하고, 제거한 요소를 반환
 ```javascript
@@ -84,4 +99,65 @@ let arr = ["사과", "포도", "복숭이"];
 
 alert(arr.unshift("딸기")); // 4, push와 동일하게 요소 개수 출력
 alert(arr); // 딸기,사과,포도,복숭아
+```
+### 반복문
+```javascript
+// for - 가장 기본적인 방법 (인덱스 사용)
+let arr = ["사과", "오렌지", "배"];
+
+for (let i = 0; i < arr.length; i++) {
+    alert(arr[i]);
+}
+
+// for...of - 인덱스 없이 값만 순회
+for (let fruit of arr) {
+    alert(fruit);
+}
+
+// for...in - (비권장 🚫) for...in은 모든 프로퍼티를 순회하기 때문에 브라우저나 기타 호스트 환경에서 쓰이는 유사 배열 객체의 프로퍼티에서 예기치 못한 오류가 발생할 수 있으며, for...in이 객체에 최적화된 반복문이기 때문에 배열에 사용할 경우 속도가 훨씬 느려짐 
+for (let key in arr) {
+    alert(arr[key])
+}
+```
+### 'length' 프로퍼티
+`length` 프로퍼티는 **배열 내 요소 개수가 아닌 가장 큰 인덱스에 1을 더한 값을 반환함**  
+`length` 프로퍼티는 수정이 가능함
+```javascript
+let arr = [];
+arr[101] = "포도";
+alert(arr.length); // 102, 배열 내 요소는 한 개뿐이지만 length는 102이 됨 배열의 인덱스는 순차대로 필요한 만큼만 사용하는 것이 좋음
+
+arr.length = 5;
+alert(arr[101]); // undefined, 수정된 인덱스보다 큰 인덱스의 값은 잘리게 됨
+
+arr.length = 102;
+alert(arr[101]); // undefined, 한번 소실된 값은 length 값을 다시 돌려놔도 복구되지 않음
+```
+### 다차원 배열
+행렬을 저장하는 용도로 쓰임
+```javascript
+let matrix = [
+    [1, 2, 3],
+    [4, 5, 6],
+    [7, 8, 9]
+];
+
+alert(matrix[1][1]); // 5
+alert(matrix[0][2]); // 3
+alert(matrix[2][1]); // 8
+```
+### toString
+배열엔 기본적으로 `toString` 메서드가 구현되어 있어 호출 시 요소를 쉼표로 구분한 문자열을 반환함
+```javascript
+let arr = [1, 2, 3];
+
+alert(arr); // 1,2,3
+alert(String(arr) === '1,2,3'); // true
+
+alert([] + 1); // 1
+alert([1] + 1); // 11
+alert([1,2] + 1) // 1,21
+alert("1,2" + 1) // 1,21
+
+// 이항 덧셈 연산자 +는 피연산자 중 문자열이 있는 경우 나머지 피연산자도 문자열로 변환한다는 점을 참고
 ```
