Update 5-5. 배열과 메서드.md

--- a/JavaScript/tutorial/5. 자료구조와 자료형/5-5. 배열과 메서드.md
+++ b/JavaScript/tutorial/5. 자료구조와 자료형/5-5. 배열과 메서드.md
@@ -1,8 +1,45 @@
 # 5. 자료구조와 자료형
 ## 5-5. 배열과 메서드
-### 요소 추가·제거 메서드
+### 요소 추가 · 제거 메서드
 - `arr.push()` 맨 끝에 요소 추가
 - `arr.pop()` 맨 끝 요소 제거
 - `arr.shift()` 맨 앞에 요소 추가
 - `arr.unshift()` 맨 앞 요소 제거
-- `arr.splice()` 요소를 추가하거나 삭제
+***
+- `arr.splice(index, deleteCount, elem1, ..., elemN)` 요소를 추가하거나 삭제
+- `arr.slice([start], [end])` arr[start]부터 arr[end-1]까지 새로운 배열로 반환
+- `arr.concat(arg1, arg2...)` 기존 arr에 인수를 합친 배열 반환
+### splice
+배열의 요소를 자유롭게 추가, 삭제, 교체할 수 있는 메서드  
+삭제의 경우 `delete` 연산자를 사용할 수 있지만, `delete`를 사용하면 내용만 삭제되고 공간 자체는 남아있음
+```javascript
+arr.splice(index, deleteCount, elem1, ..., elemN)
+// arr[index]부터 deleteCount 만큼 삭제하고, elem1 ... elemN 요소 추가
+
+let arr = ["I", "study", "JavaScript", "right", "now"];
+
+alert(arr.splice(1)) // "study,JavaScript,right,now", 삭제 대상 반환
+alert(arr) // "I", arr[index]부터 끝까지 삭제하고 남은 배열 반환
+
+alert(arr.splice(0, 3)); // "I,study,JavaScript", 삭제 대상 반환
+alert(arr); // "right,now", arr[index]부터 3개 삭제하고 남은 배열 반환
+
+alert(arr.splice(0, 3, "Let's", "dance")); // "I,study,JavaScript"
+alert(arr); // "Let's,dance,right,now"
+
+alert(arr.splice(2, 0, "complex", "language")); // "", 삭제되는 요소가 0개이기 때문에 빈 문자열 출력
+alert(arr); // "I,study,complex,language,JavaScript,right,now"
+
+alert(arr.splice(-2)); // "right,now", 음수 입력 시 끝(-1)에서부터 인덱스 부여
+alert(arr); // "I,study,JavaScript"
+```
+### slice
+배열에서 지정한 start 인덱스부터 end-1 인덱스까지를 새로운 배열로 반환
+```javascript
+let arr = ["t", "e", "s", "t"];
+
+alert(arr.slice(1, 3)); // "e,s"
+alert(arr.slice(-2)); // "s,t", 끝에서 2번째(s)부터 끝(t)까지 출력
+
+let newArr = arr.slice(); // slice에 인수를 넘기지 않으면 그대로 복사할 수 있음
+```
