Update 5-5. 배열과 메서드.md

--- a/JavaScript/tutorial/5. 자료구조와 자료형/5-5. 배열과 메서드.md
+++ b/JavaScript/tutorial/5. 자료구조와 자료형/5-5. 배열과 메서드.md
@@ -34,7 +34,7 @@ alert(arr.splice(-2)); // "right,now", 음수 입력 시 끝(-1)에서부터 인
 alert(arr); // "I,study,JavaScript"
 ```
 ### slice
-배열에서 지정한 start 인덱스부터 end-1 인덱스까지를 새로운 배열로 반환
+배열에서 지정한 start 인덱스부터 end-1 인덱스까지 새로운 배열로 반환
 ```javascript
 let arr = ["t", "e", "s", "t"];
 
@@ -43,3 +43,37 @@ alert(arr.slice(-2)); // "s,t", 끝에서 2번째(s)부터 끝(t)까지 출력
 
 let newArr = arr.slice(); // slice에 인수를 넘기지 않으면 그대로 복사할 수 있음
 ```
+### concat
+기존 배열에 인수로 받은 배열이나 값을 추가함  
+
+객체를 인수로 넘길 경우 기본적으로 분해 없이 통으로 복사함  
+인수로 넘긴 `유사 배열 객체`(length 프로퍼티를 가지고, 인덱스로 접근할 수 있지만 실제로는 배열이 아닌 객체)에 `[Symbol.isConcatSpreadable]` 프로퍼티가 있을 경우우 객체 프로퍼티 값도 함께 복사함
+```javascript
+let arr = [1, 2];
+let obj = {
+    0: "something",
+    1: "else",
+    length: 2,
+}
+let obj2 = {
+    0: "something",
+    1: "else",
+    [Symbol.isConcatSpreadable]: true,
+    length: 2,
+}
+
+alert(arr.concat([3, 4], [5], 6)); // "1,2,3,4,5,6"
+alert(arr.concat(obj)); // "1,2,3,4,5,6,[object Object]"
+alert(arr.concat(obj2)); // "1,2,3,4,5,6,[object Object],something,else"
+```
+### forEach로 반복 작업
+```javascript
+arr.forEach(function(item, index, array) => {
+    //code
+})
+```
+### 배열 탐색하기
+- `arr.indexOf(item, from)` arr[from]에서부터 item을 찾아 발견하면 해당 요소의 인덱스를 반환환하고, 발견하지 못하면 -1 반환
+- `arr.lastIndexOf(item, from)` indexOf와 동일하나 끝에서부터 탐색함
+- `arr.includes(item, from)` arr[from]에서부터 item을 찾아 발견하면 true 반환
+
