Update 5-5. 배열과 메서드.md

--- a/JavaScript/tutorial/5. 자료구조와 자료형/5-5. 배열과 메서드.md
+++ b/JavaScript/tutorial/5. 자료구조와 자료형/5-5. 배열과 메서드.md
@@ -76,4 +76,24 @@ arr.forEach(function(item, index, array) => {
 - `arr.indexOf(item, from)` arr[from]에서부터 item을 찾아 발견하면 해당 요소의 인덱스를 반환환하고, 발견하지 못하면 -1 반환
 - `arr.lastIndexOf(item, from)` indexOf와 동일하나 끝에서부터 탐색함
 - `arr.includes(item, from)` arr[from]에서부터 item을 찾아 발견하면 true 반환
+### find와 findIndex
+객체로 이루어진 배열에서 특정 조건에 부합하는 객체를 찾을 때 쓰이는 메서드
+```javascript
+// 문법
+let result = arr.find(function(item, index, array) {
+    // true 반환 시 반복을 멈추고 해당 요소 반환
+    // item 인수 외 index, array는 잘 사용되지 않음
+})
 
+
+let users = [
+    {id: 1, name: "John"},
+    {id: 2, name: "Pete"},
+    {id: 3, name: "Mary"},
+];
+
+let user = users.find(item => item.id == 1);
+let userIndex = users.find(item => item.id == 1);
+
+alert(user.name); // John
+```
