Update 5-5. 배열과 메서드.md

--- a/JavaScript/tutorial/5. 자료구조와 자료형/5-5. 배열과 메서드.md
+++ b/JavaScript/tutorial/5. 자료구조와 자료형/5-5. 배열과 메서드.md
@@ -77,7 +77,8 @@ arr.forEach(function(item, index, array) => {
 - `arr.lastIndexOf(item, from)` indexOf와 동일하나 끝에서부터 탐색함
 - `arr.includes(item, from)` arr[from]에서부터 item을 찾아 발견하면 true 반환
 ### find와 findIndex
-객체로 이루어진 배열에서 특정 조건에 부합하는 객체를 찾을 때 쓰이는 메서드
+객체로 이루어진 배열에서 특정 조건에 부합하는 객체를 찾을 때 쓰이는 메서드  
+`find`는 객체를 반환하고, `findIndex`는 객체의 인덱스를 반환함
 ```javascript
 // 문법
 let result = arr.find(function(item, index, array) {
@@ -92,8 +93,67 @@ let users = [
     {id: 3, name: "Mary"},
 ];
 
-let user = users.find(item => item.id == 1);
-let userIndex = users.find(item => item.id == 1);
+let user = users.find(item => item.id == 1); // find는 조건에 해당하는 요소를 객체로 반환
+let userIndex = users.findIndex(item => item.id == 1); // findIndex는 조건에 해당하는 요소의 인덱스를 반환
 
+alert(user); // [object Object]
 alert(user.name); // John
+
+alert(userIndex); // 0
+alert(userIndex.name); // undefined
+```
+### filter
+`find`와 유사하지만 `filter`는 조건에 부합하는 요소 전체를 **배열로 반환**함
+```javascript
+// 문법
+let results = arr.filter(function(item, index, array){
+    // true를 반환하는 요소들이 results에 순차적으로 더해짐
+    // 조건에 부합하는 요소가 없을 경우 빈 배열 반환
+});
+
+let users = [
+    {id: 1, name: "John"},
+    {id: 2, name: "Pete"},
+    {id: 3, name: "Mary"},
+];
+
+let someUsers = users.filter(item => item.id < 3);
+
+alert(someUsers); // [object Object],[object Object]
+alert(someUsers.length); // 2
+```
+### 배열 변형하기
+- `arr.map(fn)`  
+배열 요소 전체를 대상으로 함수를 호출하고, **함수 호출 결과를 배열로 반환**
+```javascript
+let lengths = ["Bilbo", "Gandalf", "Nangul"].map(item => item.length);
+alert(lengths); // "5,7,6", 각 요소(문자열)의 length 반환
+```
+- `arr.sort(fn)`  
+요소를 정렬한 배열 반환 (기존 배열도 변경되어 굳이 반환 값을 사용할 필요가 없음)  
+기본적으로 `sort`는 요소를 문자열로 취급하여 정렬함  
+새로운 정렬 기준을 사용하려면 `arr.sort()`에 새로운 함수를 넘겨 줘야 함
+```javascript
+let arr = [1, 2, 15];
+arr.sort();
+alert(arr); // "1, 15, 2", 각 요소를 숫자가 아닌 문자열로 취급하였기 때문에 2가 15보다 큰 값으로 처리됨
+
+
+function compare(a, b) {
+    if(a > b) return 1;
+    if (a == b) return 0;
+    if (a < b) return -1;
+} // a와 b를 비교하는 compare 함수 정의
+
+let compareArr = [1, 2, 15];
+compareArr.sort(compare);
+alert(compare); // "1, 2, 15"
+```
+- `arr.reverse`   
+arr의 요소를 역순으로 정렬
+```javascript
+let arr = [1, 2, 3, 4, 5];
+arr.reverse();
+
+alert(arr); // 5,4,3,2,1
 ```
