Update 5-5. 배열과 메서드.md

--- a/JavaScript/tutorial/5. 자료구조와 자료형/5-5. 배열과 메서드.md
+++ b/JavaScript/tutorial/5. 자료구조와 자료형/5-5. 배열과 메서드.md
@@ -123,13 +123,20 @@ alert(someUsers); // [object Object],[object Object]
 alert(someUsers.length); // 2
 ```
 ### 배열 변형하기
-- `arr.map(fn)`  
+- `arr.map(fn)` 배열 요소 전체를 대상으로 함수를 호출하고, 함수 호출 결과를 배열로 반환 (반환 값 배열)
+- `arr.sort(fn)` 배열 요소 전체를 정렬하여 반환 (반환 값 배열)
+- `arr.reverse()` arr의 요소를 역순으로 정렬 (반환 값 배열)
+- `str.split(delim)` 문자열 str을 delim 기준으로 나누어 배열로 반환 (반환 값 배열)
+- `arr.join(glue)` 배열 arr의 요소들을 glue로 구분하여 합친 뒤 문자열로 반환 (반환 값 문자열)
+
+***  
+### arr.map(fn)  
 배열 요소 전체를 대상으로 함수를 호출하고, **함수 호출 결과를 배열로 반환**
 ```javascript
 let lengths = ["Bilbo", "Gandalf", "Nangul"].map(item => item.length);
 alert(lengths); // "5,7,6", 각 요소(문자열)의 length 반환
 ```
-- `arr.sort(fn)`  
+### arr.sort(fn)
 요소를 정렬한 배열 반환 (기존 배열도 변경되어 굳이 반환 값을 사용할 필요가 없음)  
 기본적으로 `sort`는 요소를 문자열로 취급하여 정렬함  
 새로운 정렬 기준을 사용하려면 `arr.sort()`에 새로운 함수를 넘겨 줘야 함
@@ -149,7 +156,7 @@ let compareArr = [1, 2, 15];
 compareArr.sort(compare);
 alert(compare); // "1, 2, 15"
 ```
-- `arr.reverse`   
+### arr.reverse()
 arr의 요소를 역순으로 정렬
 ```javascript
 let arr = [1, 2, 3, 4, 5];
@@ -157,3 +164,32 @@ arr.reverse();
 
 alert(arr); // 5,4,3,2,1
 ```
+### str.split(delim)  
+ 문자열 str을 delim 기준으로 나누어 배열 형태로 반환 (`arr.join()`과 반대)
+ ```javascript
+ let names = 'Bilbo, Gandalf, Nazgul';
+
+ let arr = names.split(', '); // 문자열 names를 ', '로 구분하여 배열 arr에 저장
+ for (let name of arr) {
+    alert(`${name}에게 보내는 메시지`);
+    // Bilbo에게 보내는 메시지
+    // Gandalf에게 보내는 메시지
+    // Nazgul에게 보내는 메시지
+ }
+
+ let arr2 = names.splite(', ', 2); // 배열의 길이를 2로 제한
+ alert(arr2); // Bilbo,Gandalf
+
+ let str = "test";
+ alert(str.split('')); // 't,e,s,t', delim 인수를 빈 문자열로 넘길 경우 글자 단위로 쪼깸
+ ```
+### arr.join(glue)   
+배열 arr의 각 요소들을 인수 glue로 구분하여 합친 뒤 문자열로 반환 (`str.split()`과 반대)
+```javascript
+let arr = ['Bilbo', 'Gandalf', 'Nangul'];
+
+let str = arr.join(';');
+alert(str); // Bilbo;Gandalf;Nangul
+```
+### arr.reduce(fn)
+배열을 기반으로 값 하나를 도출할 때 사용
