--- a/JavaScript/tutorial/5. 자료구조와 자료형/5-5. 배열과 메서드.md
+++ b/JavaScript/tutorial/5. 자료구조와 자료형/5-5. 배열과 메서드.md
@@ -128,7 +128,8 @@ alert(someUsers.length); // 2
 - `arr.reverse()` arr의 요소를 역순으로 정렬 (반환 값 배열)
 - `str.split(delim)` 문자열 str을 delim 기준으로 나누어 배열로 반환 (반환 값 배열)
 - `arr.join(glue)` 배열 arr의 요소들을 glue로 구분하여 합친 뒤 문자열로 반환 (반환 값 문자열)
-
+- `arr.reduce(fn)` 배열을 기반으로 하나의 값을 도출할 때 사용 (반환 값 마지막 함수 호출 결과)
+- `arr.reduceRight(fn)` reduce와 동일하나 배열의 오른쪽부터 계산함 (반환 값 마지막 함수 호출 결과)
 ***  
 ### arr.map(fn)  
 배열 요소 전체를 대상으로 함수를 호출하고, **함수 호출 결과를 배열로 반환**
@@ -193,3 +194,42 @@ alert(str); // Bilbo;Gandalf;Nangul
 ```
 ### arr.reduce(fn)
 배열을 기반으로 값 하나를 도출할 때 사용
+```javascript
+// 문법
+let value = arr.reduce(function(accumulator, item, index, array){
+    // accumulator - 이전 함수 호출 결과 (누산기 역할 / 마지막 함수까지 호출되면 이 값이 반환됨)
+    // item - 현재 배열 요소
+    // index - 요소의 위치
+    // array - 배열
+    // initial - 함수 최초 호출 시 사용되는 초깃값
+}, [initial]);
+
+let arr = [1, 2, 3, 4, 5];
+let arr2 = [];
+
+let result = arr.reduce((sum, current) => sum + current, 0); // 최초 함수 호출 시 sum에 초깃값 0 할당
+let result2 = arr.reduce((sum, current) => sum + current); // 초깃값이 없으면 배열의 첫 번째 요소를 초깃값으로 사용하고 두 번째 요소부터 함수 호출
+let result3 = arr.reduce2((sum, current) => sum + current); // TypeError: Reduce of empty array with no initial value, 초깃값 생략 시 배열이 비어 있으면 타입 에러 발생
+
+alert(result); // 15
+alert(result2); // 15
+```
+### arr.reduceRight(fn)
+`arr.reduce(fn)`와 동일하나 `arr.reduceRight(fn)`은 배열의 오른쪽부터 연산한다는 차이점이 있음
+### Array.isArray(value)
+배열 여부 확인하는 메서드  
+일반적으로 자료형을 파악하기 위해 사용되는 **`typeof` 연산자는 객체와 배열을 구분하지 못하므로** 배열 여부를 확인하기 위해선 `Array.isArray(value)` 메서드를 사용해야 함
+```javascript
+alert(typeof {}); // object
+alert(typeof []); // object
+alert(Array.isArray([])); // true
+alert(Array.isArray({})); // false
+```
+### thisArg
+함수를 호출하는 대부분의 배열 메서드에서 사용할 수 있는 마지막 인수  
+함수 안에서의 `this` 역할을 함
+```javascript
+arr.find(func, thisArg);
+arr.filter(func, thisArg);
+arr.map(func, thisArg);
+```
