--- a/JavaScript/tutorial/5. 자료구조와 자료형/5-7. 맵과 셋.md
+++ b/JavaScript/tutorial/5. 자료구조와 자료형/5-7. 맵과 셋.md
@@ -1,5 +1,32 @@
 # 5. 자료구조와 자료형
 ## 5-7. 맵과 셋
 ### 객체와 배열의 차이
-`배열` - 순서(인덱스)가 있는 컬렉션
-`객체 `- 키 값이 있는 컬렉션
+`배열` - 순서(인덱스)가 있는 컬렉션  
+`객체` - 키 값이 있는 컬렉션  
+### 맵
+키가 있는 데이터를 저장하는데, 객체와 달리 다양한 자료형을 키 값으로 가질 수 있음
+```javascript
+let map = new Map(); // 맵 생성
+
+// key를 이용해 value 저장
+map.set('1', 'str1'); // 문자형 키
+map.set(1, 'num1'); // 숫자형 키
+map.set(true, 'bool1'); // 불린형 키
+
+// key에 해당하는 값 반환, key가 존재하지 않으면 undefined를 반환
+// 맵은 키의 자료형을 변환시키지 않고 그대로 유지하기 때문에 숫자형 1과 문자형 '1' 키는 다르게 인식됨
+alert(map.get(1)); // num1
+alert(map.get('1')); // str1
+
+// 요소의 개수 반환
+alert(map.size); // 3
+
+// key에 해당하는 값 삭제
+map.delete('1');
+
+// 맵 안의 모든 요소 제거
+map.clear();
+
+```
+
+
