--- a/JavaScript/tutorial/5. 자료구조와 자료형/5-7. 맵과 셋.md
+++ b/JavaScript/tutorial/5. 자료구조와 자료형/5-7. 맵과 셋.md
@@ -4,7 +4,10 @@
 `배열` - 순서(인덱스)가 있는 컬렉션  
 `객체` - 키 값이 있는 컬렉션  
 ### 맵
-키가 있는 데이터를 저장하는데, 객체와 달리 다양한 자료형을 키 값으로 가질 수 있음
+키가 있는 데이터를 저장하는데, 객체와 달리 다양한 자료형을 키 값으로 가질 수 있음  
+맵은 전용 메서드인 `get`, `set`을 이용함  
+일반 객체처럼 `map[key] = '요소 내용'` 방식으로 요소를 추가할 수 있지만, 이 방법은 **맵을 일반 객체로 취급하여 제약이 생기기 때문에** map을 사용할 땐 전용 메서드를 사용해야 함 
+- 기본 문법
 ```javascript
 let map = new Map(); // 맵 생성
 
@@ -12,6 +15,11 @@ let map = new Map(); // 맵 생성
 map.set('1', 'str1'); // 문자형 키
 map.set(1, 'num1'); // 숫자형 키
 map.set(true, 'bool1'); // 불린형 키
+
+// 맵의 set 메서드는 호출할 때마다 자신을 반환하는데, 이를 이용하여 map.set을 체이닝 할 수 있음
+map.set('2', 'str2')
+    .set(2, 'num2')
+    .set(true, 'bool2');
 
 // key에 해당하는 값 반환, key가 존재하지 않으면 undefined를 반환
 // 맵은 키의 자료형을 변환시키지 않고 그대로 유지하기 때문에 숫자형 1과 문자형 '1' 키는 다르게 인식됨
@@ -26,7 +34,91 @@ map.delete('1');
 
 // 맵 안의 모든 요소 제거
 map.clear();
-
 ```
+- 객체형 키
+```javascript
+// 맵은 객체형 키를 허용함
+let john = {name: "John"};
+map.set(john, 123);
+alert(map.get(john)); // 123
+
+// 일반 객체는 모든 키를 문자열로 변환하기 때문에 객체형 키를 사용하면 "[object Object]"가 됨
+let obj = {};
+let obj[john] = 123;
+alert(obj["[object Object"]); // 123
+```
+- 맵의 요소에 반복 작업하기 (`map.keys()`, `map.values()`, `map.entries()`)
+```javascript
+let map = new Map([
+    ['John', 24],
+    ['Pete', 52],
+    ['Mary', 16]
+]); // 각 요소가 키-값 쌍인 배열로 새로운 맵 생성
+
+// 키를 대상으로 순회 (map.keys())
+for (let name of map.keys()) {
+    alert(name); // John, Pete, Mary
+}
+
+// 값을 대상으로 순회 (map.values())
+for (let age of map.values()) {
+    alert(age); // 24, 52, 16
+}
+
+// [키, 값] 쌍을 대상으로 순회 (map.entries())
+for (let entry of map) {
+    alert(antry) // John,24 ...
+}
+
+// 맵은 배열처럼 forEach를 사용할 수 있음
+map.forEach((value, key, map) => {
+    alert(`${key}: ${value}`); // John: 24 ...
+})
+```
+- 맵 ↔ 객체
+```javascript
+// 객체를 맵으로 바꾸기 (Object.entries())
+let obj = {
+    name: "John",
+    age: 30
+};
+
+let map = new Map(Object.entries(obj));
+alert(map.get('name')); // John
 
 
+// 맵을 객체로 바꾸기 (Object.fromEntries())
+let map = new Map([
+    ['John', 24],
+    ['Pete', 52],
+    ['Mary', 16]
+]);
+
+let obj = Object.fromEntries(map.entries()); // .entries() 생략 가능
+alert(obj.John); // 24
+```
+### 셋
+중복을 허용하지 않는 값을 모아놓은 컬렉션  
+**같은 값이 여러 번 등록되어도 한 번만 저장됨**  
+맵과 동일하게 `set.keys()`, `set.values()`, `set.entries()`으로 반복 작업을 수행함 (`set`에서의 .entries()는 `map`과의 호환성을 위해 만들어짐)
+- 기본 문법
+```javascript
+let set = new Set(); // 셋 생성
+
+let john = { name: "John" };
+let pete = { name: "Pete" };
+let mary = { name: "Mary" };
+
+// 값을 추가하고 셋 자신을 반환
+set.add(john);
+set.add(Pete);
+set.add(Mary);
+set.add(john);
+set.add(pete);
+
+alert(set.size); // 3, 중복되지 않은 값의 수를 반환
+
+for (let user of set) {
+    alert(user.name); // John, Pete, Mary
+}
+```
