Update 5-10. 구조 분해 할당.md

--- a/JavaScript/tutorial/5. 자료구조와 자료형/5-10. 구조 분해 할당.md
+++ b/JavaScript/tutorial/5. 자료구조와 자료형/5-10. 구조 분해 할당.md
@@ -45,7 +45,7 @@ let surname = "Lee";
 alert(`${firstName} ${surname}`); // Lee Bora
 
 
-// 나머지 요소 배열 하나에 저장
+// 나머지 요소 배열에 저장
 let [name1, name2, ...rest] = ["Julius", "Caesar", "Consul", "of the Roman Republic"]; // 이때 '...변수명'은 가장 마지막에 위치해야 함
 
 alert(name1); // Julius
@@ -70,4 +70,145 @@ alert(surname); // Anonymous
 let [firstName = prompt('이름을 입력하세요.'), surname = prompt('성을 입력하세요.')] = ["보라"];
 alert(firstName); // 보라
 alert(surname); // prompt에서 받아온 값
+```
+### 객체 분해하기
+```javascript
+let obj = {
+    title: "Menu",
+    width: 100,
+    height: 200
+} // 객체 생성
+
+
+// title - obj.title 값
+// width - obj.width 값
+// height - obj.height 값 할당
+let {title, width, height} = obj;
+
+
+// 키 값과 같은 이름을 가진 변수에 할당되기 때문에 변수 선언 순서가 달라도 결과는 같음
+let {width, height, title} = obj;
+
+alert(width); // 100
+alert(height); // 200
+alert(title); // Menu
+
+
+// 원하는 프로퍼티만 가져올 수 있음
+let {title} = obj;
+
+
+// {객체 프로퍼티: 목표 변수} 문법으로 다른 이름을 가진 변수에 저장
+let {width: w, height: h, title} = obj;
+
+alert(w) // 100
+alert(h) // 200
+alert(title) // Menu
+
+
+// {객체 프로퍼티 = 값} 문법으로 기본 값 할당
+let obj = {
+    title: "Menu"
+};
+
+let {width=100, height=200, title} = obj;
+
+alert(width); // 100
+alert(height); // 200
+alert(title); // Menu
+
+
+// 콜론(:)과 할당 연산자(=) 같이 쓰는 것도 가능
+let {width: w = 100, height: h = 200, title} = obj;
+
+
+// prompt 함수로 값 입력 받기
+let obj = {
+    title: "Menu"
+};
+
+let {width = prompt("width?"), title = prompt("title")} = obj;
+
+alert(title); // Menu
+alert(width); // prompt 창에 입력한 값
+
+
+// 나머지 요소 객체에 저장
+let obj = {
+    title: "Menu",
+    width: 100,
+    height: 200
+};
+
+let {title, ...rest} = obj; // title만 변수에 저장하고 나머지는 rest 객체에 저장
+
+alert(title); // Menu
+alert(rest.width); // 100
+alert(rest.height); // 200
+
+
+// 기존에 선언된 변수에 할당하기
+let title, width, height;
+
+{title, width, height} = obj; // SyntaxError: Unexpected token '='
+// 자바스크립트는 위 코드의 {...}를 코드 블록으로 인식함
+
+({title, width, height} = obj); // 괄호로 감싸면 표현식으로 인식
+alert(title); // Menu
+```
+### 중첩 구조 분해
+객체나 배열이 또 다른 객체나 배열을 포함하는 경우, 중첩된 정보 추출
+```javascript
+let obj = {
+    size: {
+        width: 100,
+        height: 200
+    },
+    items: ["Cakes", "Donut"],
+    extra: true
+}; // obj 객체 안에 size 객체와 items 배열이 중첩되어 있음
+
+// 코드를 여러 줄로 작성하는 것이 명확함
+let {
+    size: {
+        width,
+        height
+    },
+    items: [item1, item2],
+    title = "Menu"
+} = obj;
+
+alert(title); // Menu
+alert(width); // 100
+alert(height); // 200
+alert(item1); // Cake
+alert(item2); // Donut
+
+// 이때 객체 size와 배열 items의 전용 변수는 없음
+// 객체와 배열 안의 값을 변수에 저장
+```
+### 매개변수가 많은 함수에서의 구조 할당
+매개변수가 많은 함수는 넘겨주는 인수의 순서를 주의해야 함  
+기본 값을 사용해도 되는 경우 `undefined` 값을 넘겨야 해서 코드가 지저분해 보일 수 있음
+```javascript
+function showMenu(title = "Untitled", width = 200, height = 100, items = []) {
+    // ...
+}
+
+showMenu("My Menu", undefined, undefined, ["item1", "item2"]);
+```
+이때 구조 분해를 이용하여 전달할 객체를 따로 정의하면 코드를 더 보기 좋게 작성할 수 있음  
+```javascript
+let obj = {
+    title: "My menu",
+    item: ["item1", "item2"]
+} // 1. 인수로 전달할 객체 생성
+
+// 3. 함수는 전달받은 객체를 분해하여 변수에 할당
+function showMenu({title = "Untitled", width = 200, height = 100, items = []}) {
+    alert(`${title} ${width} ${height}`); // My Menu 200 100
+    alert(items); // item1, item2
+}
+
+shoyMenu(obj); // 2. 함수 호출 시 인수로 객체를 넘김
 ```
