--- a/JavaScript/tutorial/5. 자료구조와 자료형/5-12. JSON과 메서드.md
+++ b/JavaScript/tutorial/5. 자료구조와 자료형/5-12. JSON과 메서드.md
@@ -6,7 +6,7 @@ JSON은 자료형이 문자열임
 - `JSON.stringify` - 객체를 JSON으로 바꿈
 - `JSON.parse` - JSON을 객체로 바꿈
 ### JSON.stringify
-적용 가능 메서드
+적용 가능 자료형
 - 객체 `{...}`
 - 배열 `[...]`
 - 원시형
@@ -26,4 +26,19 @@ alert(typeof json); // string
 alert(json); // {"name":"John","age":30}
 // JSON으로 인코딩 된 객체는 문자열에 백틱, 작은따옴표를 사용하지 않고 큰 따옴표만 사용함
 // 프로퍼티 이름도 큰 따옴표로 감쌈
+```
+호출 시 무시되는 프로퍼티
+- 함수 프로퍼티 (메서드)
+- 심볼형 프로퍼티 (키가 심볼인 프로퍼티)
+- 값이 `undefined`인 프로퍼티
+```javascript
+let user = {
+    sayHi() { // 무시
+        alert("Hello");
+    },
+    [Symbol("id")]: 123, // 무시
+    something: undefined // 무시
+};
+
+alert(JSON.stringify(user)); // {}, 빈 객체 출력
 ```
