--- a/JavaScript/tutorial/5. 자료구조와 자료형/5-12. JSON과 메서드.md
+++ b/JavaScript/tutorial/5. 자료구조와 자료형/5-12. JSON과 메서드.md
@@ -6,8 +6,9 @@ JSON은 자료형이 문자열임
 - `JSON.stringify` - 객체를 JSON으로 바꿈
 - `JSON.parse` - JSON을 객체로 바꿈
 ### JSON.stringify
-적용 가능 자료형
+**적용 가능 자료형**
 - 객체 `{...}`
+- 중첩 객체 `{{...}}`
 - 배열 `[...]`
 - 원시형
     - 문자형 (문자열 -> "문자열")
@@ -24,10 +25,28 @@ let json = JSON.stringify(student);
 
 alert(typeof json); // string
 alert(json); // {"name":"John","age":30}
+
 // JSON으로 인코딩 된 객체는 문자열에 백틱, 작은따옴표를 사용하지 않고 큰 따옴표만 사용함
 // 프로퍼티 이름도 큰 따옴표로 감쌈
+
+
+let meetup = {
+    title: "Conference",
+    room: {
+        number: 23,
+        participants: ["john", "ann"]
+    } // 중첩 객체
+};
+
+alert(JSON.stringify(meetup));
+/* 객체 속 중첩 객체도 문자열로 변환됨
+{
+    "title":"Conference",
+    "room":{"number":23,"participants":["john","ann"]}
+}
+*/
 ```
-호출 시 무시되는 프로퍼티
+**호출 시 무시되는 프로퍼티**
 - 함수 프로퍼티 (메서드)
 - 심볼형 프로퍼티 (키가 심볼인 프로퍼티)
 - 값이 `undefined`인 프로퍼티
@@ -41,4 +60,62 @@ let user = {
 };
 
 alert(JSON.stringify(user)); // {}, 빈 객체 출력
+```
+**에러가 발생하는 경우**
+- 객체 내 순환 참조가 있을 경우
+```javascript
+let room = {
+    number: 23
+};
+
+let meetup = {
+    title: "Conference",
+    participants: ["john", "ann"]
+};
+
+meetup.place = room; // meetup 객체가 room 객체를 참조
+room.occupiedBy = meetup; // room 객체가 meetup 객체를 참조
+
+JSON.stringify(meetup); // 에러 발생, Error: Converting circular structure to JSON
+```
+### replacer
+`stringify`의 선택 인수인 `replacer`를 활용하면 원하는 프로퍼티만 직렬화할 수 있음
+```javascript
+let json = JSON.stringify(value, [replacer, space]);
+
+// value - 인코딩 대상
+// replacer - 인코딩 대상이 되는 프로퍼티가 담긴 배열 또는 매핑 함수
+// space - 서식 변경 목적으로 사용할 공백 문자 수
+
+let room = {
+  number: 23
+};
+
+let meetup = {
+  title: "Conference",
+  participants: [{name: "John"}, {name: "Alice"}],
+  place: room // meetup 객체는 room 객체를 참조함
+};
+
+room.occupiedBy = meetup; // room 객체는 meetup 객체를 참조함
+
+alert( JSON.stringify(meetup, ['title', 'participants']));
+// 두 번째 인수에 해당 프로퍼티 배열을 넘겨 줌
+// {"title":"Conference","participants":[{},{}]}, 배열에 name 프로퍼티를 넣지 않았기 때문에 participants 안에 속한 객체는 빈 객체로 출력됨
+
+alert( JSON.stringify(meetup, ['title', 'participants', 'place', 'name', 'number']));
+// 문자열로 변환하고자 하는 값의 프로퍼티는 모두 적어야 함 (예시에선 occupiedBy를 제외한 모든 프로퍼티)
+/*
+{
+  "title":"Conference",
+  "participants":[{"name":"John"},{"name":"Alice"}],
+  "place":{"number":23}
+}
+*/
+
+alert( JSON.stringify(meetup, function replacer(key, value) {
+  alert(`${key}: ${value}`);
+  return (key == 'occupiedBy') ? undefined : value;
+}));
+// 넘겨야 할 배열의 길이가 길어질 때를 대비하여 함수를 사용하는 것도 좋은 방법임
 ```
