Update 5-12. JSON과 메서드.md

--- a/JavaScript/tutorial/5. 자료구조와 자료형/5-12. JSON과 메서드.md
+++ b/JavaScript/tutorial/5. 자료구조와 자료형/5-12. JSON과 메서드.md
@@ -119,3 +119,14 @@ alert( JSON.stringify(meetup, function replacer(key, value) {
 }));
 // 넘겨야 할 배열의 길이가 길어질 때를 대비하여 함수를 사용하는 것도 좋은 방법임
 ```
+### space
+`stringify`의 마지막 인수로, 가독성을 높이기 위해 중간에 삽입할 공백 문자 수를 나타냄  
+단순 전달 목적이면 `space` 없이 직렬화하는 편  
+`space`에 숫자 값 n을 넣으면 **중첩 객체는 별도의 줄에 출력하고 공백 문자 n개를 써 들여쓰기함**
+### JSON.parse
+JSON으로 인코딩 된 객체를 다시 객체로 디코딩 할 수 있음
+```javascript
+let value = JSON.parse(str, [reviver]);
+// str - JSON 형식의 문자열
+// reviver - 모든 (key, value) 쌍을 대상으로 호출되는 function(key,value) 형태의 함수로 값을 변경시킬 수 있음
+```
