--- a/JavaScript/tutorial/6. 함수 심화학습/6-1. 재귀와 스택.md
+++ b/JavaScript/tutorial/6. 함수 심화학습/6-1. 재귀와 스택.md
@@ -25,16 +25,21 @@ alert(pow(2, 3)); // 8
     이 과정을 <U>재귀 단계</U>라고 하며, 예시에서 재귀 단계는 n이 1이 될 때까지 계속됨  
 
 
-#### 재귀 단계 순서 (`pow(2, 4)` 예시)
+#### ▶ 재귀 단계 순서 (`pow(2, 4)` 예시)
 1. pow(2, 4) = 2 * pow(2, 3)
 2. pow(2, 3) = 2 * pow(2, 2)
 3. pow(2, 2) = 2 * pow(2, 1)
 4. pow(2, 1) = 2
 
-#### 재귀 깊이(recursion depth)
+#### ▶ 재귀 깊이(recursion depth)
 재귀 함수에서 가장 처음 하는 호출을 포함한 중첩 호출의 최대 개수 (`pow(x, n)`에서 재귀 깊이는 `n`)  
 
 자바스크립트 엔진은 최대 재귀 깊이를 제한하는데, 만 개까지는 확실히 허용하고 그 이상의 경우 엔진 내부에서 자동으로 `tail calls optimization`을 통해 최적화를 수행함 (간단한 경우)
 ### 실행 컨텍스트와 스택
-#### 실행 컨텍스트
+#### ▶ 실행 컨텍스트
 함수 실행에 대한 세부 정보를 담고 있는 내부 데이터 구조  
+#### ▶ 함수 내부 중첩 호출 실행 절차
+1. 현재 함수의 실행이 일시 중지됨
+2. 중지된 함수와 연관된 `실행 컨텍스트`는 `실행 컨텍스트 스택`이라는 자료 구조에 저장됨
+3. 중첩 호출이 실행됨
+4. 중첩 호출 실행이 끝난 후 `실행 컨텍스트 스택`에서 일시 중단한 함수의 `실행 컨텍스트`를 꺼내오고, 중단한 함수의 실행을 이어감
