--- a/JavaScript/tutorial/6. 함수 심화학습/6-1. 재귀와 스택.md
+++ b/JavaScript/tutorial/6. 함수 심화학습/6-1. 재귀와 스택.md
@@ -36,10 +36,36 @@ alert(pow(2, 3)); // 8
 
 자바스크립트 엔진은 최대 재귀 깊이를 제한하는데, 만 개까지는 확실히 허용하고 그 이상의 경우 엔진 내부에서 자동으로 `tail calls optimization`을 통해 최적화를 수행함 (간단한 경우)
 ### 실행 컨텍스트와 스택
-#### ▶ 실행 컨텍스트
 함수 실행에 대한 세부 정보를 담고 있는 내부 데이터 구조  
 #### ▶ 함수 내부 중첩 호출 실행 절차
 1. 현재 함수의 실행이 일시 중지됨
 2. 중지된 함수와 연관된 `실행 컨텍스트`는 `실행 컨텍스트 스택`이라는 자료 구조에 저장됨
 3. 중첩 호출이 실행됨
 4. 중첩 호출 실행이 끝난 후 `실행 컨텍스트 스택`에서 일시 중단한 함수의 `실행 컨텍스트`를 꺼내오고, 중단한 함수의 실행을 이어감
+### 재귀적 구조
+자기 자신의 일부를 복제하는 형태의 자료 구조
+#### ▶ 연결 리스트
+배열은 `arr.push/pop`을 제외하고, 배열의 요소를 삽입/삭제하려면 요소 전체의 번호를 다시 매겨야 함  
+이 과정이 비효율적이기 때문에 요소를 빠르게 삽입/삭제하려면 배열 대신 `연결 리스트`를 사용하는 것이 좋음
+```javascript
+let list = {
+    value: 1,
+    next: {
+        value: 2,
+        next: {
+            value: 3,
+            next: {
+                value: 4,
+                next: null
+            }
+        }
+    }
+};
+
+// 위와 동일하게 작동하는 코드
+let list = {value: 1};
+list.next = {value: 2};
+list.next.next = {value: 3};
+list.next.next.next = {value: 4};
+list.next.next.next.next = null;
+```
