Update 6-2. 나머지 매개변수와 전개 구문.md

--- a/JavaScript/tutorial/6. 함수 심화학습/6-2. 나머지 매개변수와 전개 구문.md
+++ b/JavaScript/tutorial/6. 함수 심화학습/6-2. 나머지 매개변수와 전개 구문.md
@@ -28,3 +28,22 @@ function sum(firstName, lastName, ...titles) {
     ...
 } // 매개변수 중 일부는 변수로 저장하고 나머지는 배열로 저장하는 함수 (이때 나머지 매개변수는 항상 마지막에 있어야 함)
 ```
+### arguments 객체
+`arguments`는 이터러블 객체이기 때문에 반복이 가능함 (배열 메서드는 사용할 수 없음)  
+나머지 매개변수 `...` 인수의 일부만 사용할 수 있도록 되어 있지만, `arguments`의 경우 인수의 전체를 담기 때문에 불가능함
+```javascript
+function showName() {
+    alert(arguments.length);
+    alert(arguments[0]);
+    alert(arguments[1]);
+}
+
+showName("Bora", "Lee"); // 2, Bora, Lee 출력
+showName("Bora"); // 1, Bora 출력
+```
+### 스프레드 문법
+`스프레드 문법`은 배열 요소들을 전개하여 반환함
+```javascript
+let arr = [3, 5, 1];
+alert(Math.max(...arr)); // 5 (배열 arr를 전개하여 인수 목록 구성)
+```
