Update 6-2. 나머지 매개변수와 전개 구문.md

--- a/JavaScript/tutorial/6. 함수 심화학습/6-2. 나머지 매개변수와 전개 구문.md
+++ b/JavaScript/tutorial/6. 함수 심화학습/6-2. 나머지 매개변수와 전개 구문.md
@@ -47,3 +47,12 @@ showName("Bora"); // 1, Bora 출력
 let arr = [3, 5, 1];
 alert(Math.max(...arr)); // 5 (배열 arr를 전개하여 인수 목록 구성)
 ```
+문자열에도 `스프레드 문법`이 적용되며, `Array.from(obj)`와 같은 결과를 출력함  
+
+`스프레드 문법`은 이터러블 객체에만 적용되고, `Array.from(obj)`은 이터러블 객체뿐 아니라 유사 배열 객체에도 적용되기 때문에 `Array.from(obj)`를 보편적으로 사용함 
+```javascript
+let str = "Hello";
+
+alert([...str]); // H,e,l,l,o
+alert(Array.from(obj)); // H,e,l,l,o
+```
