--- a/JavaScript/tutorial/6. 함수 심화학습/6-2. 나머지 매개변수와 전개 구문.md
+++ b/JavaScript/tutorial/6. 함수 심화학습/6-2. 나머지 매개변수와 전개 구문.md
@@ -56,3 +56,20 @@ let str = "Hello";
 alert([...str]); // H,e,l,l,o
 alert(Array.from(obj)); // H,e,l,l,o
 ```
+### 스프레드 문법을 이용하여 배열과 객체의 복사본 만들기
+```javascript
+let arr = [1, 2, 3];
+let arrCopy = [...arr];
+
+alert(JSON.stringify(arr) === JSON.stringify(arrCopy)); // true
+alert(arr === arrCopy); // false
+
+let obj = {1, 2, 3};
+let objCopy = {...obj};
+
+alert(JSON.stringify(obj) === JSON.stringify(objCopy)); // true
+alert(obj === objCopy); // false
+
+// 기존 배열(객체)와 복사본의 요소는 같지만, 배열(객체)의 참조 값은 다름
+// 참조가 다르므로 기존 배열(객체)을 수정해도 복사본은 영향을 받지 않음
+```
