Update 6-3. 변수의 유효범위와 클로저.md

--- a/JavaScript/tutorial/6. 함수 심화학습/6-3. 변수의 유효범위와 클로저.md
+++ b/JavaScript/tutorial/6. 함수 심화학습/6-3. 변수의 유효범위와 클로저.md
@@ -24,3 +24,18 @@ for (let i = 0; i < 3; i++) {
 alert(i); // ReferenceError: i is not defined
 ```
 - **중첩 함수**
+```javascript
+function makeCounter() {
+  let count = 0;
+
+  return function() {
+    return count++;
+  }; // 중첩 함수
+}
+
+let counter = makeCounter();
+
+alert( counter() ); // 0
+alert( counter() ); // 1
+alert( counter() ); // 2
+```
